--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+.container-small{
+    width:70%;
+    margin:auto;
+}
 #hero{
     background-image:url("../img/hero.jpg"),linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
     background-blend-mode: overlay;
@@ -20,4 +24,8 @@
 .hero-description h5{font-size:50px;}
 .hero-description h2{font-size:50px;}
 .hero-description img{padding: 40px 0 20px 0;}
+
+#about{ padding:50px;}
+#about h2, #service h2, #wedo h2, #portofolio h2, #work h2, #contact h2{font-size:50px;}
+
 
