--- a/css/styles.css
+++ b/css/styles.css
@@ -69,3 +69,15 @@ body{
     
     height:100%;
 }
+#work{padding: 50px;}
+#contact{
+    text-align:center;
+    background-image:url("../img/c_image.jpg"),linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
+    background-blend-mode: overlay;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color:white;
+    padding:50px;
+    
+}
