--- a/css/styles.css
+++ b/css/styles.css
@@ -81,3 +81,14 @@ body{
     padding:50px;
     
 }
+form{
+    margin-top:40px;
+}
+form input, form textarea{
+ width:100%;
+ border-radius:4px;
+ border:1px solid rgb(122, 120, 120);
+ padding:5px 10px;
+ background:none;
+ margin-bottom: 30px;
+}
