re-assign background images to different sections.

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body{
     margin:auto;
 }
 #hero{
-    background-image:url("/assets/backgrounds/h_img.jpg"),linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
+    background-image:url("../assets/backgrounds/h_img.jpg"),linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
     background-blend-mode: overlay;
     height: 100vh;
     background-position: center center;
@@ -39,7 +39,7 @@ body{
 #about h2, #service h2, #wedo h2, #portofolio h2, #work h2, #contact h2{font-size:50px;}
 #service{
     text-align:center;
-    background-image:url("/assets/backgrounds/s_image.jpg"),linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
+    background-image:url("../assets/backgrounds/s_image.jpg"),linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
     background-blend-mode: overlay;
     background-position: center;
     background-repeat: no-repeat;
@@ -78,7 +78,7 @@ body{
 #work{padding: 50px;}
 #contact{
     text-align:center;
-    background-image:url("/assets/backgrounds/c_image.jpg"),linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
+    background-image:url("../assets/backgrounds/c_image.jpg"),linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
     background-blend-mode: overlay;
     background-position: center;
     background-repeat: no-repeat;
